DTSCCI-5231 Fixing issue so the Document type can be changed